service/tests/requests/snapshots/auth/cannot_update_current_user_when_image_is_invalid@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    400,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"{\\\"image\\\":\\\"Invalid image URL\\\"}\"}",
)
