service/tests/requests/snapshots/auth/cannot_update_current_user_when_name_has_special_chars@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    400,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"name\":\"Only letters, numbers and underscores can be used.\"}}",
)
