service/tests/requests/snapshots/auth/cannot_update_current_user_when_name_is_short@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    400,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"{\\\"name\\\":\\\"Name requires 6 letters\\\"}\"}",
)
