service/tests/requests/snapshots/auth/cannot_update_current_user_when_name_is_too_long@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    400,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"name\":\"Name must be under 32 letters\"}}",
)
