service/tests/requests/snapshots/auth/cannot_update_current_user_when_token_subject_does_not_exist@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    404,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"Entity not found\"}",
)
