service/tests/requests/snapshots/auth/cannot_update_current_user_with_refresh_cookie_only@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    401,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"Missing credentials\"}",
)
