service/tests/requests/snapshots/auth/logout_revokes_refresh_token@auth.snap
---
source: tests/requests/auth.rs
expression: "(refresh_response.status_code(), refresh_response.text())"
---
(
    401,
    "{\"error\":\"Your authentication token is invalid. Please sign in again.\",\"code\":\"invalid_token\"}",
)
