service/tests/requests/snapshots/auth/refresh_token_reuse_is_rejected@auth.snap
---
source: tests/requests/auth.rs
expression: "(second_response.status_code(), second_response.text())"
---
(
    401,
    "{\"error\":\"Your authentication token is invalid. Please sign in again.\",\"code\":\"invalid_token\"}",
)
