service/tests/requests/snapshots/auth/when_access_token_is_invalid_current_user_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    401,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"Your authentication token is invalid. Please sign in again.\",\"code\":\"invalid_token\"}",
)
