service/tests/requests/snapshots/auth/when_credentials_are_missing_current_user_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    401,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"Missing credentials\",\"code\":\"missing_credentials\"}",
)
