service/tests/requests/snapshots/auth/when_email_does_not_exist_no_reset_token_is_sent@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 188
expression: "(response.status_code(), response.headers(),response.text())"
---
(
    200,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"message\":\"If an account exists for that email, a password reset link has been sent.\"}",
)
